updating code to use stubs when possible